--- a/.github/workflows/v2.yml
+++ b/.github/workflows/v2.yml
@@ -28,7 +28,7 @@ jobs:
 
     - uses: azure/login@v1
       with:
-       creds: ${{ secrets.AZURE_CREDENTIALS_GITHUB_SECRET }}
+       creds: ${{ secrets.AZURE_CREDENTIALS }}
   
     - uses: azure/appservice-settings@v1
       with:
