--- a/.github/workflows/v2.yml
+++ b/.github/workflows/v2.yml
@@ -32,13 +32,13 @@ jobs:
   
     - uses: azure/appservice-settings@v1
       with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        app-name: 'oaweb-17431'
         mask-inputs: false
         general-settings-json: '{"linuxFxVersion": "PYTHON|${{ env.PYTHON_VERSION }}"}' #'General configuration settings as Key Value pairs'
   
   # deploy web app
     - uses: azure/webapps-deploy@v2
       with:
-       app-name: ${{ env.AZURE_WEBAPP_NAME }}
+       app-name: 'oaweb-17431'
        package: ${{ env.WORKING_DIRECTORY }}
        startup-command: ${{ env.STARTUP_COMMAND }}
