--- a/.github/workflows/v2.yml
+++ b/.github/workflows/v2.yml
@@ -3,7 +3,7 @@ name: Deploy to Azure App Service V2
 on: workflow_dispatch
 
 env:
-  AZURE_WEBAPP_NAME: oaweb-20178 # set this to your application's name
+  AZURE_WEBAPP_NAME: oaweb-17431 # set this to your application's name
   WORKING_DIRECTORY: '.'         # set this to the path to your path of working directory inside github repository, defaults to the repository root
   PYTHON_VERSION: '3.9' 
   STARTUP_COMMAND: ''           # set this to the startup command required to start the gunicorn server. default it is empty
@@ -32,13 +32,13 @@ jobs:
   
     - uses: azure/appservice-settings@v1
       with:
-        app-name: 'oaweb-17431'
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
         mask-inputs: false
         general-settings-json: '{"linuxFxVersion": "PYTHON|${{ env.PYTHON_VERSION }}"}' #'General configuration settings as Key Value pairs'
   
   # deploy web app
     - uses: azure/webapps-deploy@v2
       with:
-       app-name: 'oaweb-17431'
+       app-name: ${{ env.AZURE_WEBAPP_NAME }}
        package: ${{ env.WORKING_DIRECTORY }}
        startup-command: ${{ env.STARTUP_COMMAND }}
